fixed rt main container alignment

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,8 @@ body {
     display: flex;
     /**/
     background-color: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
 
     width: 100vw;
     height: 88.5vh;
